JumpScript/tests/baselines/reference/invalidVoidValues.errors.txt
tests/cases/conformance/types/primitives/void/invalidVoidValues.jump(2,1): error TS2322: Type '1' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.jump(3,1): error TS2322: Type '""' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.jump(4,1): error TS2322: Type 'true' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.jump(7,1): error TS2322: Type 'typeof E' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.jump(8,1): error TS2322: Type 'E' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.jump(12,1): error TS2322: Type 'C' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.jump(16,1): error TS2322: Type 'I' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.jump(18,1): error TS2322: Type '{ f(): void; }' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.jump(21,1): error TS2322: Type 'typeof M' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.jump(24,5): error TS2322: Type 'T' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidValues.jump(26,1): error TS2322: Type '<T>(a: T) => void' is not assignable to type 'void'.


==== tests/cases/conformance/types/primitives/void/invalidVoidValues.jump (11 errors) ====
    var x: void;
    x = 1;
    ~
!!! error TS2322: Type '1' is not assignable to type 'void'.
    x = '';
    ~
!!! error TS2322: Type '""' is not assignable to type 'void'.
    x = true;
    ~
!!! error TS2322: Type 'true' is not assignable to type 'void'.
    
    enum E { A }
    x = E;
    ~
!!! error TS2322: Type 'typeof E' is not assignable to type 'void'.
    x = E.A;
    ~
!!! error TS2322: Type 'E' is not assignable to type 'void'.
    
    class C { foo: string }
    var a: C;
    x = a;
    ~
!!! error TS2322: Type 'C' is not assignable to type 'void'.
    
    interface I { foo: string }
    var b: I;
    x = b;
    ~
!!! error TS2322: Type 'I' is not assignable to type 'void'.
    
    x = { f() {} }
    ~
!!! error TS2322: Type '{ f(): void; }' is not assignable to type 'void'.
    
    module M { export var x = 1; }
    x = M;
    ~
!!! error TS2322: Type 'typeof M' is not assignable to type 'void'.
    
    function f<T>(a: T) {
        x = a;
        ~
!!! error TS2322: Type 'T' is not assignable to type 'void'.
    }
    x = f;
    ~
!!! error TS2322: Type '<T>(a: T) => void' is not assignable to type 'void'.